# fs-bot

./: .gitignore  Cargo.toml  README.md  log4rs.yaml
src/: command.rs  main.rs
