[package]
name = "fs-bot-rs"
version = "0.1.0"
authors = ["tscho"]

[dependencies]
discord = { git = "https://github.com/SpaceManiac/discord-rs.git" }
hound = "2.0.0"
chrono = "0.2"
rand = "0.3.14"
log = "*"
log4rs = "0.5.0"
rusqlite = "0.7.3"
# diesel = { version = "0.8.0", features = ["sqlite"], default-features = false }
# diesel_codegen = { version = "0.8.0", features = ["sqlite"] }
dotenv = "0.8.0"
